修改权限拦截 修改个人中心显式路径

--- a/online-web/src/main/webapp/rechargeJump.html
+++ b/online-web/src/main/webapp/rechargeJump.html
@@ -3,6 +3,6 @@ window.onload=function(){
 
 	localStorage.setItem("personcenter","mymoney ");
 	localStorage.setItem("findStyle","profile ");
-	location.href="/web/html/personal-center/personal-index.html#menu4"
+	location.href="/my#menu4"
 }
 </script>
