--- a/online-web/src/main/webapp/web/html/quiz.html
+++ b/online-web/src/main/webapp/web/html/quiz.html
@@ -50,7 +50,7 @@
             </li>
             <li class="glyphiconRight">></li>-->
             <li>
-                <a href="/web/html/ansAndQus.html">问答</a>
+                <a href="/questions">问道</a>
             </li>
             <li class="glyphiconRight">></li>
             <li>我要提问</li>
