--- a/online-web/src/main/webapp/web/html/weixinPayPage.html
+++ b/online-web/src/main/webapp/web/html/weixinPayPage.html
@@ -101,7 +101,7 @@
 									if(preurl){
 										window.location.href = "http://"+window.location.hostname+preurl;
 									} else {
-										window.location.href = "/web/html/personal-center/personal-index.html";
+										window.location.href = "/my";
 									}
 								};
 								$(".tank span").html(m + "s");
@@ -122,7 +122,7 @@
 									//点击跳转充值记录
 									localStorage.setItem("personcenter","mymoney ");
 									localStorage.setItem("findStyle","profile ");
-                                    location.href="/web/html/personal-center/personal-index.html#menu1-1"
+                                    location.href="/my#menu1-1"
 								};
 								$(".tank span").html(m + "s");
 							}, 1000);
