--- a/wechat/src/main/webapp/xcview/html/physician/search.html
+++ b/wechat/src/main/webapp/xcview/html/physician/search.html
@@ -131,7 +131,7 @@
 <!--<script src="/xcview/js/common/jquery-1.8.3.min.js"></script>-->
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 
-<script src="/xcview/js/search.js?v=wechat_1.1.1"></script>
+<script src="/xcview/js/physician/search.js?v=wechat_1.1.1"></script>
 
 
 
