--- a/online-web/src/main/webapp/otherDevice.html
+++ b/online-web/src/main/webapp/otherDevice.html
@@ -74,7 +74,7 @@
     <div class="contain">
        <img src="webview/images/usershow/tishi.png" alt="" style="margin-top: 55px;width:1200px ;height:280px ;"/>
        <a href="/web/html/login.html" class="reLog">重新登录</a>
-       <a href="/App.html" class="downApp"></a>
+       <a href="/app" class="downApp"></a>
        
     </div>
 
