--- a/online-web/src/main/webapp/web/html/anchor/bak/curriculum404.html
+++ b/online-web/src/main/webapp/web/html/anchor/bak/curriculum404.html
@@ -1044,7 +1044,7 @@
 				<div class="one">主播头像</div>
 				<div class="two two_img">
 					<!--<img src="../../images/3.jpg" id="profilePhoto">-->
-					<img src="../../../images/hospitalDefault.png" id="profilePhoto">
+					<img src="/web/images/hospitalDefault.png" id="profilePhoto">
 					
 				</div>
 			</div>
