--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -1324,7 +1324,7 @@
 					<!--暂无学员-->
 					<div class="no-order-box all-money-order hide">
 						<div class="no-order-img">
-							<img src="../../images/nodealHos.png"/>
+							<img src="/web/images/nodealHos.png"/>
 						</div>
 						<p>暂无学员</p>
 					</div>
@@ -2496,7 +2496,7 @@
 					<div class="one">主播头像</div>
 					<div class="two two_img">
 						<!--<img src="../../images/3.jpg" id="profilePhoto">-->
-						<img src="../../images/hospitalDefault.png" id="profilePhoto">
+						<img src="/web/images/hospitalDefault.png" id="profilePhoto">
 						
 					</div>
 				</div>
