中医师--学堂--发现--我的。底部修改跳转链接

--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -159,6 +159,10 @@
 	<div class="footer" style="display: none">
 		<ul>
 			<li>
+				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
+				<p>中医师</p>
+			</li>
+			<li>
 				<a href="/xcview/html/home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
@@ -167,7 +171,7 @@
 				<p>学习</p>
 			</li>
 			<li>
-				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem; margin-bottom: 0.07rem;background: url(/xcview/images/discovery_threes.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
+				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.14rem; margin-bottom: 0.07rem;background: url(/xcview/images/discovery_threes.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p style="color: #00BC12;">发现</p>
 			</li>
 			<li>
