--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -154,6 +154,10 @@
 	<div class="footer">
 		<ul>
 			<li>
+				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
+				<p>中医师</p>
+			</li>
+			<li>
 				<a href="home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
@@ -162,7 +166,7 @@
 				<p>学习</p>
 			</li>
 			<li>
-				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
+				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p>发现</p>
 			</li>
 			<li>
