--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -206,19 +206,23 @@
 	<div class="footer">
 		<ul>
 			<li>
-				<a href="home_page.html" class="footer_one"></a>
+				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
+				<p>中医师</p>
+			</li>
+			<li>
+				<a href="/xcview/html/home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
 			<li>
-				<a href="" class="footer_two" style="margin-top: 0.13rem; margin-bottom: 0.06rem;background: url(../images/learn_twos.png) no-repeat center;background-size: 0.38rem 0.38rem;"></a>
+				<a href="" class="footer_two" style="margin-top: 0.14rem; margin-bottom: 0.06rem;background: url(../images/learn_twos.png) no-repeat center;background-size: 0.4rem 0.4rem;"></a>
 				<p style="color: #00BC12;">学习</p>
 			</li>
 			<li>
-				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
+				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.14rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p>发现</p>
 			</li>
 			<li>
-				<a href="my_homepage.html" class="footer_four"></a>
+				<a href="/xcview/html/my_homepage.html" class="footer_four"></a>
 				<p>我的</p>
 			</li>
 		</ul>
